<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding_middle"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />
    <TextView
        android:id="@+id/title_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="@dimen/title_login_size"
        android:textColor="@color/primaryColor"
        android:layout_marginBottom="@dimen/common_padding_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/tilUserEmail"
        android:textAlignment="center"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_useremail"
        app:endIconMode="clear_text"
        android:layout_marginVertical="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_form"
        app:endIconTint="@color/secondaryColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/etUserEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_userpass"
        app:endIconMode="password_toggle"
        android:layout_marginVertical="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilUserEmail"
        app:endIconTint="@color/secondaryColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        app:cornerRadius="@dimen/common_padding_middle"
        android:paddingVertical="@dimen/common_padding_min"
        android:layout_marginHorizontal="@dimen/common_padding_min"
        app:backgroundTint="@color/primaryColor"
        android:text="@string/boton_text_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilUserPass"
        android:textAllCaps="false"
       />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:textColor="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@id/btnSesion"
        android:text="@string/text_register"
        android:textSize="@dimen/common_padding_default"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/primaryColor"
        app:layout_constraintTop_toBottomOf="@id/btnSesion"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_register"
        app:layout_constraintBottom_toBottomOf="@+id/txt_register"
        android:text="@string/title_button_reg"
        android:textSize="@dimen/common_padding_default"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        />


</androidx.constraintlayout.widget.ConstraintLayout>